--- a/register.html
+++ b/register.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
+    <link rel="stylesheet" href="./styles/register.css">
     <link href="public/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <script src="public/plugins/jquery/jquery-1.9.1.min.js"></script>
     <script src="public/plugins/bootstrap/js/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <style>
         body {
             background-color: #f8f9fa;
@@ -18,28 +21,33 @@
     </style>
 </head>
 <body>
-    <div class="container" style="max-width: 400px;">
-        <div class="panel panel-primary">
-            <div class="panel-heading text-center">User Registration</div>
-            <div class="panel-body">
-                <form id="registerForm" method="POST" action="register.php">
-                    <div class="form-group">
-                        <label for="username">Username</label>
-                        <input type="text" class="form-control" name="username" id="username" placeholder="Enter Username" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="password">Password</label>
-                        <input type="password" class="form-control" name="password" id="password" placeholder="Enter Password" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary btn-block">Register</button>
-                </form>
-                <br>
-                <p class="text-center">Already have an account? <a href="login.html">Login here</a></p>
+    <div class="registerContainer">
+        <div class="container" style="max-width: 400px;">
+            <div class="panel panel-primary">
+                <h1 class="panel-heading text-center" style="margin-bottom: 40px;">User Registration</h1>
+                <div class="panel-body">
+                    <form id="registerForm" method="POST" action="register.php" enctype="multipart/form-data">
+                        <div class="form-group">
+                            <label for="username">Username</label>
+                            <input type="text" class="form-control" name="username" id="username" placeholder="Enter Username" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Password</label>
+                            <input type="password" class="form-control" name="password" id="password" placeholder="Enter Password" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="image">Profile Image</label>
+                            <input type="file" class="form-control" name="image" id="image" accept="image/*" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-block">Register</button>
+                    </form>
+                    <br>
+                    <p class="text-center">Already have an account? <a href="login.html">Login here</a></p>
+                </div>
             </div>
         </div>
     </div>
-    <div>
-        
-    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
